--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -56,13 +56,49 @@ Chair of Department: Professor Blumberg ([mark-blumberg@uiowa.edu](mailto:mark-b
 
 # Description of Course {#description}
 
-<mark>INSERT</mark>
+How can we use information to make predictions about uncertain events?
+This course is about empiricism (basing theories on observed data) and judgment, prediction, and decision making in the context of uncertainty.
+Students will be introduced to modern analytical techniques used to make informed predictions, test theories, and draw conclusions from a given dataset.
+But this is no ordinary course...
 
+Rather than memorizing these empirical approaches in abstraction, students will employ these methods in the active, immersive, hands-on learning laboratory of Fantasy Football.
+In this way, the course will weave together two contiguous threads: an introductory overview of data analysis techniques, and a captivating application of these techniques through a semester-long experience in Fantasy Football with their classmates.[^adapted]
+
+The class does not assume that students know anything about (or care about) football or fantasy football.
+The class is welcome to all, assuming the student meets the prerequisites and that they are interested in learning about empiricism (basing theories on observed data), statistics, and judgment, prediction, and decision making in the context of uncertainty.
 *You are urged to reconsider your decision to take this class if you are reluctant to examine these topics in a scientific manner.*
+
+[^adapted]:
+    Elements of this syllabus and course were borrowed and adapted (with permission) from a similar course by Benjamin Motz.
+
+## What is Fantasy Football? And Why Focus on Fantasy Football? {#fantasyFootball}
+
+Fantasy football is an online game where participants assemble (i.e., "draft") imaginary teams composed of real-life National Football League (NFL) players.
+In the game of fantasy football, participants compete against others, accumulating "fantasy" points based on players' actual statistical performances in games (and the goal is to outscore one’s opponent each week to win matches and ultimately claim victory in the league).
+Fantasy football relies heavily on prediction—trying to predict which players will perform best and selecting them accordingly.
+In this way, fantasy football provides a plethora of decision making opportunities in the face of uncertainty, and a wealth of data for analyzing these decisions.
+However, unlike many other applied domains in psychology, fantasy football (1) allows a person to see the accuracy of their predictions on a timely basis and (2) provides a safe environment for friendly competition.
+Thus, it provides a unique domain to evaluate—and improve—the accuracy of various prediction models.
 
 # Learning Objectives {#objectives}
 
-<mark>INSERT</mark>
+By the end of the course, successful students will be able to:
+
+- Apply empirical inference and appreciate the value it provides over speculative supposition.
+- Ask educated questions when confronted with decisions in the face of uncertainty.
+- Understand human decision making, including common heuristics and cognitive biases and how to mitigate them analytically.
+- Engage in critical thinking about causality, including devising plausible alternative explanations for observed effects.
+- Understand causal inference including confounding, causal pathways, and counterfactuals.
+- Think empirically about human behavior and performance.
+- Describe the strengths and weaknesses of humans versus computers in prediction scenarios.
+- Manipulate and summarize datasets.
+- Critically evaluate the strengths and limitations of different statistical models and methodologies used in predicting uncertain events, enhancing their understanding of statistical inference and model selection.
+- Use various analytical techniques for predicting the outcome of uncertain events, and for uncovering latent causes of patterns in observed data.
+- Interpret findings from various statistical approaches and evaluate the accuracy of predictions.
+- Engage in iterative problem-solving processes, refining analytical approaches based on feedback and outcomes, and adapting strategies accordingly.
+- Communicate statistical findings and analyses in both written and oral formats, demonstrating proficiency in presenting complex information to diverse audiences.
+- Make sense of big data.
+- Use practical analytical skills that can be applied in future research and job settings.
 
 # Required Textbook {#textbook}
 
@@ -234,6 +270,14 @@ If you feel that you or someone you know may be struggling with an academic, emo
 <u>If you or someone you know is contemplating suicide</u>, either call or text the Suicide and Crisis Lifeline at 988, or call 911.
 
 # Disclaimer {#disclaimer}
+
+"*This material probably won't win you fantasy football championships.
+You could take what we learn and apply it to fantasy football and you might become 5 percent more likely to win.
+Or...
+Consider the broader relevance of this.
+You could learn data analysis and figure out ways to apply it to other systems.
+And you could be making a six-figure salary within the next five years.*"
+– Benjamin Motz, Ph.D.
 
 This syllabus is subject to change.
 Any changes will be discussed in class, via email, and/or on ICON.
