--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -269,6 +269,11 @@ If you feel that you or someone you know may be struggling with an academic, emo
 
 <u>If you or someone you know is contemplating suicide</u>, either call or text the Suicide and Crisis Lifeline at 988, or call 911.
 
+# Disclosures {#disclosures}
+
+I am the Owner of Fantasy Football Analytics, LLC, which operates https://fantasyfootballanalytics.net.
+I do not require or encourage students to use my website, and I do not promote or endorse any specific content or services offered by Fantasy Football Analytics.
+
 # Disclaimer {#disclaimer}
 
 "*This material probably won't win you fantasy football championships.
