--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -81,10 +81,11 @@ Take this class if:
 - you are interested in learning statistics through the lens of a fun sports domain (fantasy football); or
 - you are interested in applying psychological and statistical concepts to fantasy football; to gain a strong understanding of critical thinking and decision making in sports.
 
-*You are urged to reconsider your decision to take this class if*:
+*Do not take this class if*:
 
 - you are just looking for an "easy" class (the class is not easy);
-- you are reluctant to examine fantasy football topics in a scientific manner; or
+- you are reluctant to examine fantasy football topics in a scientific manner;
+- you do not want to write public blog articles as part of the class; or
 - you do not want to learn statistics and programming, and do not want to persist through inevitable challenges along the way.
 
 [^adapted]:
@@ -148,6 +149,11 @@ Developing strong competencies in these domains will prepare you for a competiti
 ## Attendance and Participation {#attendanceParticipation}
 
 <u>INSERT</u>
+
+## Blog Articles {#blogArticles}
+
+As part of the class, you will post blog articles.
+<u>The blog articles are public</u>; <u>do not take this course if you do not feel comfortable posting blog articles with your full name in a public forum</u>.
 
 ## Readings & Quizzes {#readingQuizzes}
 
