20240710 - add course number

--- a/index.Rmd
+++ b/index.Rmd
@@ -1,5 +1,5 @@
 ---
-title: "Wiki for PSY:COURSE NUMBER – Fantasy Football: Predictive Analytics and Empiricism (SEMESTER YEAR)"
+title: "Wiki for PSY:3170 – Fantasy Football: Predictive Analytics and Empiricism (SEMESTER YEAR)"
 ---
 
 ```{r setup, include = FALSE}
