--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -72,6 +72,8 @@ In this way, the course will weave together two contiguous threads: an introduct
 
 The class involves reading primary source material, applying statistical programming (using `R` software), conducting data analysis, and composing written work on a weekly basis.
 
+To be clear, <u>this is a statistics and empiricism course</u>.
+It merely uses fantasy football as a lens and application through which to learn about statistics and empiricism.
 The class does not assume that students know anything about (or care about) football or fantasy football.
 The class is welcome to all, assuming the student meets the prerequisites and that they are interested in learning about empiricism (basing theories on observed data), statistics, and judgment, prediction, and decision making in the context of uncertainty.
 
