--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -175,7 +175,38 @@ In order to take a make-up exam, you must provide acceptable documentation to be
 
 # Grading {#grading}
 
-<u>INSERT</u>
+Final grades will be assigned at the end of semester on the basis of your total percentage of points earned on exams, quizzes, attendance, and writing assignments, as detailed below.
+Grades will be assigned on an absolute scale (criterion-referenced grading); course grades will not be curved.
+Please note: As a matter of fairness to all students, I assign grades based on performance and do not negotiate grades.
+Final grades will be assigned based on the following ranges:
+
+| Grade | Percent |
+|:------|:--------|
+| A+    | 97–100% | 
+| A     | 93–96   |
+| A-    | 90–92   |
+| B+    | 87–89   |
+| B     | 83–86   |
+| B-    | 80–82   |
+| C+    | 75–79   |
+| C     | 70–74   |
+| C-    | 65–69   |
+| D+    | 60–64   |
+| D     | 55–59   |
+| D-    | 50–54   |
+| F     | < 50%   |
+
+I round up from .5 when determining final grades.
+For example, a course percent of 79.50 would receive a B-, whereas a course percent of 79.49 would receive a C+.
+
+The relative contribution of each component to your final grade is as follows:
+
+ - X%	Examination #1
+ - X%	Examination #2
+ - X%	Examination #3 (administered only during the class's Final Exam time slot)
+ - X% 	Discussion Attendance/Participation
+ - X% 	Reading Quizzes
+ - X%   Writing Assignments
 
 <u>Extra credit:</u>
 
