--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -204,7 +204,7 @@ The relative contribution of each component to your final grade is as follows:
  - X%	Examination #1
  - X%	Examination #2
  - X%	Examination #3 (administered only during the class's Final Exam time slot)
- - X% 	Discussion Attendance/Participation
+ - X% 	Attendance/Participation
  - X% 	Reading Quizzes
  - X%   Writing Assignments
 
