--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -26,7 +26,7 @@ To access the course site, log into [Iowa Courses Online (ICON)](https://icon.ui
 
 # Course Home {#home}
 
-The College of Liberal Arts and Sciences (CLAS) is the home of this course, and CLAS governs the add and drop deadlines, the "second-grade only" option (SGO), academic misconduct policies, and other policies and procedures.
+The College of Liberal Arts and Sciences (CLAS) is the home of this course, and CLAS governs the add and drop deadlines, academic misconduct policies, and other policies and procedures.
 Other UI colleges may have different policies.
 
 # Instructor Contact Information {#instructor}
@@ -47,7 +47,7 @@ The best way to reach me outside of class is by email.
 Department of Psychological and Brain Sciences: [https://psychology.uiowa.edu](https://psychology.uiowa.edu)\
 Department of Psychological and Brain Sciences Main Office: G60 Psychological and Brain Sciences Building (335-2406)\
 Coordinator of Undergraduate Studies: Professor Windschitl ([paul-windschitl@uiowa.edu](mailto:paul-windschitl@uiowa.edu); 335-3681)\
-Academic Coordinator: Professor Johnson ([debra-johnson@uiowa.edu](mailto:debra-johnson@uiowa.edu); 335-0135)\
+Academic Coordinator: Janeil Page-Jamison ([janeil-page@uiowa.edu](mailto:janeil-page@uiowa.edu); 384-3657)\
 Chair of Department: Professor Blumberg ([mark-blumberg@uiowa.edu](mailto:mark-blumberg@uiowa.edu); 335-2424)
 
 # Prerequisites {#prereqs}
@@ -131,8 +131,8 @@ https://isaactpetersen.github.io/Fantasy-Football-Analytics-Textbook
 
 # Academic Honesty and Misconduct {#academicHonesty}
 
-All students in CLAS courses are expected to abide by the [CLAS Code of Academic Honesty](https://clas.uiowa.edu/students/handbook/academic-fraud-honor-code).
-Academic misconduct must be reported by instructors to CLAS according to [these procedures](https://clas.uiowa.edu/students/handbook/academic-fraud-honor-code).
+All students in CLAS courses are expected to abide by the [college's standards of academic honesty](https://clas.uiowa.edu/students/handbook/academic-fraud-honor-code).
+Academic misconduct must be reported by instructors to CLAS according to [these procedures](https://policy.clas.uiowa.edu/clas-policies-and-procedures/undergraduate-education/academic-misconduct-undergraduate).
 Please note that collaboration with other classmates on <u>INSERT</u> is not permitted.
 However, I do encourage you to collaborate with classmates on <u>INSERT</u>.
 Because writing, analytical, and critical thinking skills are part of the learning outcomes of this course, all work submitted by students should be prepared by the student.
@@ -168,11 +168,16 @@ As part of the class, you will post blog articles.
 
 ### Missing Exams {#missingExams}
 
+[University regulations require that students be allowed to make up examinations](https://opsmanual.uiowa.edu/students/absences-class) that have been missed due to illness, religious holy days, military service obligations (including service-related medical appointments), or other unavoidable circumstances or University-sponsored activities.
+Students with UI-authorized activities must discuss their absences with the instructor as soon as possible.
+Religious obligations must be communicated within the first three weeks of classes.
+See below for the documentation necessary for an absence to be excused and to be eligible to take a make-up exam.
+
 Students are allowed to make up exams that have been missed due to illness, mandatory religious observations, official University activities, or other unavoidable circumstances.
 Note: the format of the make-up exam may differ from the original exam.
-If you know that you must be away at the time of an exam for one of these reasons, Professor Petersen <u>or the TA</u> must be contacted in advance whenever possible to schedule a make-up exam.
+If you know that you must be away at the time of an exam for one of these reasons, Professor Petersen <mark>or the TA</mark> must be contacted in advance whenever possible to schedule a make-up exam.
 In order to take a make-up exam, you must provide acceptable documentation to be eligible to take it: including documentation for any report of illness; any other circumstances must be documented by the University of Iowa [Absence Explanation Form](https://clas.uiowa.edu/faculty/student-attendance-and-absences) and must be approved by Professor Petersen.
-<u>In sum, to be eligible for a make-up exam, Professor Petersen <u>or the TA</u> must be contacted before the examination whenever possible, and you must send acceptable form of documentation to Professor Petersen <u>or the TA</u></u>.
+<u>In sum, to be eligible for a make-up exam, Professor Petersen <mark>or the TA</mark> must be contacted before the examination whenever possible, and you must send acceptable form of documentation to Professor Petersen <mark>or the TA</mark></u>.
 
 # Grading {#grading}
 
@@ -200,6 +205,9 @@ Final grades will be assigned based on the following ranges:
 I round up from .5 when determining final grades.
 For example, a course percent of 79.50 would receive a B-, whereas a course percent of 79.49 would receive a C+.
 
+# Course Grades {#courseGrades}
+
+Final course grades will be assessed based on your performance in the activities below.
 The relative contribution of each component to your final grade is as follows:
 
  - X%	Examination #1
@@ -264,7 +272,7 @@ We will have one exam during the semester and one final exam during finals week.
 
 # Date and Time of the Final Exam {#finalExam}
 
-The final examination date and time will be announced by the Registrar generally by the fifth week of classes and it will be announced on the course ICON site once it is known.
+The [final examination date and time](https://registrar.uiowa.edu/final-exam-schedules) will be announced by the Registrar generally by the fifth week of classes, and it will be announced on the course ICON site once it is known.
 <u>Do not plan your end of the semester travel plans until the final exam schedule is made public.
 It is your responsibility to know the date, time, and place of the final exam.</u>
 According to Registrar's final exam policy, students <u>have a maximum of two weeks after the announced final exam schedule</u> to request a change if an exam conflict exists or if a student has more than two exams in one day (see the [policy](https://registrar.uiowa.edu/makeup-final-examination-policies) here).
@@ -277,12 +285,14 @@ There are many course resources available to help you succeed in the class, incl
 
 # Drop Deadline for this Course {#dropDeadline}
 
-You may drop an individual course before the deadline; after this deadline you will need collegiate approval.
-You can look up the [drop deadline for this course](https://registrar.uiowa.edu/course-deadlines) here.
+You may drop an individual course before the drop deadline; after this deadline you will need collegiate approval.
+You can look up the drop deadline for this course [here](https://registrar.uiowa.edu/course-deadlines).
 When you drop a course, a "W" will appear on your transcript.
 The mark of "W" is a neutral mark that does not affect your GPA.
+To discuss how dropping (or staying in) a course might affect your academic goals, please contact your Academic Advisor.
 Directions for adding or dropping a course and other registration changes can be found on the [Registrar's website](https://registrar.uiowa.edu/change-registration-myui).
 Students can find policies on dropping CLAS courses [here](https://clas.uiowa.edu/students/students-academic-policies/registration-policies#dropping).
+Students should adhere to the [academic deadlines](https://grad.uiowa.edu/academics/deadlines) and policies set by the Graduate College.
 
 # Feedback about the Course {#feedback}
 
@@ -291,7 +301,8 @@ If you have comments on the class or my teaching, please feel free to meet with 
 
 ## Student Complaints {#complaints}
 
-Students with a complaint about a grade or a related matter should first discuss the situation with the instructor, and finally with the Director or Chair of the school, department, or program offering the course.
+Students with a complaint about a grade or a related matter should first discuss the situation with the instructor, finally with the DEO (Chair) of the department, school or program offering the course.
+Sometimes students will be referred to the department or program's Director of Undergraduate Studies (DUS) or Director of Graduate Studies (DGS). 
 Students should contact [CLAS Undergraduate Programs](https://clas.uiowa.edu/students/handbook/student-rights-responsibilities#rights) for support when the matter is not resolved at the previous level.
 
 # Communication: UI Email {#email}
@@ -299,50 +310,37 @@ Students should contact [CLAS Undergraduate Programs](https://clas.uiowa.edu/stu
 Students are responsible for all official correspondences sent to their UI email address (uiowa.edu) and must use this address for any communication with instructors or staff in the UI community.
 For the privacy and the protection of student records, UI faculty and staff can only correspond with UI email addresses.
 
-# Health and Safety {#health}
-
-The University of Iowa strongly encourages students, faculty, and staff to be vaccinated against COVID-19.
-For information about COVID-19 vaccines on campus, please see https://coronavirus.uiowa.edu.
-If you are feeling sick, test positive for COVID-19, or may have been exposed to COVID-19, please refer to the campus guidance for the appropriate action (https://coronavirus.uiowa.edu/returning-campus/showing-symptoms).
-Regardless of your vaccination status, if you have symptoms consistent with COVID-19, please stay home and follow the appropriate isolation/quarantine guidance.
-For up-to-date information throughout the semester, please refer to https://coronavirus.uiowa.edu.
-
-# College of Liberal Arts and Sciences (CLAS) Course Policies {#clasPolicies}
-
-- [Attendance and Absences](https://clas.uiowa.edu/faculty/student-attendance-and-absences)\
-[University regulations require that students be allowed to make up examinations](https://opsmanual.uiowa.edu/students/absences-class) that have been missed due to illness, religious holy days, military service obligations (including service-related medical appointments), or other unavoidable circumstances or University-sponsored activities.
-See the section above on "[Missing Exams](#missingExams)" for the documentation necessary for an absence to be excused and to be eligible to take a make-up exam.
-Students with UI-authorized activities must discuss their absences with the instructor or TA as soon as possible.
-Religious obligations must be communicated within the first three weeks of classes.
-
 ## Other Expectations of Student Performance {#otherExpectations}
 
 Students have the right to a distraction-free learning environment.
 You have the responsibility to help create such a classroom environment.
-Please treat other students in the class, the TAs, and the instructor with respect.
+Please treat other students in the class<mark>, the TAs,</mark> and the instructor with respect.
 Students are expected to help each other learn and to contribute overall to the learning environment of the course.
 Arriving prepared for class is part of this expectation.
 
 # University Policies {#UIowaPolicies}
 
+[University Policies](https://provost.uiowa.edu/student-course-policies)
+
 [Accommodations for Students with Disabilities](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#accommodations-for-students-with-disabilities)\
-The University is committed to providing an educational experience that is accessible to all.
+The University is committed to providing an educational experience that is accessible to all students.
 If a student has a diagnosed disability or other disabling condition that may impact the student's ability to complete the course requirements as stated in the syllabus, the student may seek accommodations through [Student Disability Services](https://sds.studentlife.uiowa.edu/students) (SDS).
-SDS is responsible for making Letters of Accommodation (LOA) available.
+SDS is responsible for making Letters of Accommodation (LOA) available to the student.
 <u>The student must provide an LOA to the instructor as early in the semester as possible, but requests not made at least two weeks prior to the scheduled activity for which an accommodation is sought may not be accommodated.</u>
-The LOA will specify what reasonable course accommodations the student is eligible for and those the instructor should provide. Additional information can be found on the [SDS website](https://sds.studentlife.uiowa.edu/students/apply).
+The LOA will specify what reasonable course accommodations the student is eligible for and those the instructor should provide.
 
 - [Free Speech and Expression](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#free-speech-and-expression)
+- [Non-Discrimination](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#non-discrimination-statement)
+- [Accommodations for Students with Disabilities](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#accommodations-for-students-with-disabilities)
+- [Absences from Class](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#absences-from-class)
 - [Absences for Religious Holy Days](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#absences-for-religious-holy-days)
-- [Non-discrimination](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#non-discrimination-statement)
+- [Absences for Military Service Obligations](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#absences-for-military-service-obligations)
 - [Classroom Expectations](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#classroom-expectations)
 - [Sexual Harassment/Misconduct and Supportive Measures](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#sexual-harassment--sexual-misconduct-and-supportive-measures)
 - [Conflict Resolution](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#conflict-resolution)
 - [Mental Health](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#mental-health)
 - [Basic Needs and Student Support](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#basic-needs-and-student-support)
 - [Sharing of Class Recordings](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#sharing-of-class-recordings-if-appropriate)
-- [Absences from Class](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#absences-from-class)
-- [Absences for Military Service Obligations](https://provost.uiowa.edu/teaching-resources/course-syllabi-information#absences-for-military-service-obligations)
 
 # Where to Get Academic Support for This Course {#academic-support}
 
@@ -354,14 +352,12 @@ The LOA will specify what reasonable course accommodations the student is eligib
 # Mental Health Resources and Student Support {#mental-health}
 
 Students are encouraged to be mindful of their mental health and seek help as a preventive measure or if feeling overwhelmed and/or struggling to meet course expectations.
-Students are encouraged to talk to their instructor for assistance with specific class-related concerns.
-For additional support and counseling, students are encouraged to contact University Counseling Service (UCS).
-Information about UCS, including resources and how to schedule an appointment, can be found at [counseling.uiowa.edu](https://counseling.uiowa.edu).
-Find out more about UI mental health services at [mentalhealth.uiowa.edu](http://mentalhealth.uiowa.edu).
+Students are encouraged to talk to their instructor for assistance with course-related concerns.
+For additional mental health support, please see the guidance and resources at [mentalhealth.uiowa.edu](http://mentalhealth.uiowa.edu), including the 24-7 [UI Support and Crisis Line](https://mentalhealth.uiowa.edu/ui-support-and-crisis-line).  
 
-[Student Care and Assistance](https://dos.uiowa.edu/assistance) provides assistance to University of Iowa students who are experiencing a variety of crisis and emergency situations, including but not limited to medical issues, family emergencies, unexpected challenges, and sourcing basic needs such as food and shelter.
-More information on the resources related to basic needs can be found at [basicneeds.uiowa.edu/resources](https://basicneeds.uiowa.edu/resources).
-Students are encouraged to contact Student Care & Assistance in the Office of the Dean of Students (Room 135 IMU, [dos-assistance@uiowa.edu](dos-assistance@uiowa.edu), or 319-335-1162) for support and assistance with resources.
+Additionally, the Office of the Dean of Students can help students navigate personal crisis situations.
+They can provide one-on-one support, help with identifying options, and access to [basic needs resources (such as food, rent, childcare, etc.)](http://basicneeds.uiowa.edu).
+Student Care and Assistance: 132 IMU, [dos-assistance@uiowa.edu](mailto:dos-assistance@uiowa.edu), or 319-335-1162 and more info: [dos.uiowa.edu/assistance](https://dos.uiowa.edu/assistance)
 
 If you feel that you or someone you know may be struggling with an academic, emotional, or psychological problem, the following organizations are available for assistance:
 
