--- a/syllabus.Rmd
+++ b/syllabus.Rmd
@@ -226,6 +226,8 @@ To receive the extra credit for implementing the fix/suggestion, [create a pull 
 For instructions regarding how to create a pull request, see [here](https://devpsylab.github.io/DataAnalysis/git.html#pull-request).
 If you are going to implement a change, I strongly encourage you to discuss with me before doing so, so I can verify that the change is worth implementing.
 I reserve the right to determine whether the "fix", suggestion, or implementation warrants extra credit!
+
+In addition, the winner(s) of the fantasy football league will get 1 point extra credit.
 No additional extra-credit opportunities are available for this course.
 
 # Tentative Course Outline (exam dates fixed) {#outline}
